2006-08-28  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline
	2006-01-21  Ben Elliston  <bje@au.ibm.com>
	* varasm.c (assemble_real): Initialise data array.

	Backport from mainline
	2006-01-18  Ben Elliston  <bje@au.ibm.com>	
	* Makefile.in (D32PBIT_FUNCS): New.
	(D64PBIT_FUNCS, D128PBIT_FUNCS): Likewise.
	(libgcc.mk): Set D32PBIT, D64PBIT, D128PBIT, D32PBIT_FUNCS,
	D64PBIT_FUNCS and D128PBIT_FUNCS.
	(LIBGCC_DEPS): Include $(D32PBIT), $(D64PBIT), $(D128PBIT).
	* mklibgcc.in Bring in the DFP support code if D32PBIT, D64PBIT or
	D128PBIT are set.
	(decnumber_dep): Define.
	* doc/libgcc.texi (Decimal float library routines): New node.
	* config/dfp-bit.h, config/dfp-bit.c: New files.

2006-08-25  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline
	2006-01-18  Ben Elliston  <bje@au.ibm.com>	
	* expr.c (emit_move_change_mode): Always adjust addresses, not
	just during reload.  Copy replacements only during reload.
	(emit_move_insn_1): Move MODE_DECIMAL_FLOAT modes by invoking
	emit_move_via_integer.

	Backport from mainline
	2006-01-18  Ben Elliston  <bje@au.ibm.com>
	* config/rs6000/rs6000.c (rs6000_hard_regno_mode_ok): Reject
	decimal float modes for all floating point registers.

	Backport from mainline
	2006-01-18  Ben Elliston  <bje@au.ibm.com>
	* config/rs6000/predicates.md (reg_or_mem_operand): Pair up
	match_code "mem" with match_test "macho_lo_sum_memory_operand".

	Backport from mainline
	2006-01-13  Ben Elliston  <bje@au.ibm.com>
	* doc/tm.texi (Data Output): Add REAL_VALUE_TO_TARGET_DECIMAL32,
	REAL_VALUE_TO_TARGET_DECIMAL64 and REAL_VALUE_TO_TARGET_DECIMAL128
	documentation.

	Backport from mainline
	2006-01-10  Ben Elliston  <bje@au.ibm.com>
	* config/rs6000/predicates.md (easy_fp_constant): Discount decimal
	float modes.
	* config/rs6000/rs6000.c (rs6000_scalar_mode_supported_p): New.
	(TARGET_SCALAR_MODE_SUPPORTED_P): Define.
	(USE_FP_FOR_ARG): Reject decimal float modes.
	(function_arg_advance): Likewise.