@@ -36,13 +36,13 @@ Software Foundation, 51 Franklin Street, Fifth Floor, Boston, MA
 #include "decimal32.h"
 #include "decNumber.h"
 
-static unsigned long
-dfp_byte_swap (unsigned long in)
+static uint32_t
+dfp_byte_swap (uint32_t in)
 {
-  unsigned long out;
+  uint32_t out = 0;
   unsigned char *p = (unsigned char *) &out;
   union {
-    unsigned long i;
+    uint32_t i;
     unsigned char b[4];
   } u;
 
